# Junia

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CreateAndOpenProject.bat  LICENSE  README.md
include/Junia/: Junia.hpp
include/Junia/Core/: Core.hpp  Exception.hpp  StringConvert.hpp  Strings.hpp
include/Junia/Exceptions/: ExStringEncoding.hpp  ExUnicodeStringEncoding.hpp  ExUtf16StringEncoding.hpp  ExUtf8StringEncoding.hpp
src/Junia/: Junia.cpp
src/Junia/Core/: Exception.cpp  StringConvert.cpp
src/Junia/Exceptions/: ExStringEncoding.cpp  ExUnicodeStringEncoding.cpp  ExUtf16StringEncoding.cpp  ExUtf8StringEncoding.cpp
